<resources>
    <string name="app_name">CollegeHelper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">Карта</string>
    <string name="menu_event">События</string>
    <string name="menu_schedule">Расписание</string>
    <string name="menu_registration">Регистрация преподавателя</string>



    <string-array name="ListGroups">
        <item>1-ИС</item>
        <item>1-СП</item>
        <item>1-СА</item>
        <item>2-ТМС</item>
        <item>2-TO</item>
        <item>2-CA</item>
        <item>3-ИС</item>
        <item>3-ПСО1</item>
        <item>3-ПСО2</item>
        <item>4-ПР1</item>
    </string-array>

    <string-array name="ListMails">
        <item>@gmail.com</item>
        <item>@yandex.ru</item>
        <item>@ya.ru</item>
        <item>@yandex.com</item>
        <item>@yandex.ua</item>
        <item>@yandex.kz</item>
        <item>@yandex.by</item>
        <item>@mail.ru</item>
        <item>@list.ru</item>
        <item>@inbox.ru</item>
        <item>@bk.ru</item>
        <item>@yahoo.com</item>
        <item>@hotmail.com</item>
        <item>@outlook.com</item>
        <item>@internet.ru</item>
    </string-array>

    <string-array name="ListEvents">
        <item>Самостоятельные работы</item>
        <item>Контрольные работы</item>
        <item>Мероприятия от колледжа</item>
        <item>Другое</item>
    </string-array>

    <string-array name="ListCourse">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="PrepOrAdm">
        <item>Преподаватель</item>
        <item>Администратор</item>
    </string-array>

    <string name="AuthString">Авторизация</string>
</resources>